syntax = "proto3";
import "google/protobuf/empty.proto";
package ms2gs;
option cc_generic_services = true;

message OnLoginRequest
{
	uint64 player_id  = 1;
}

service C2GsService 
{
  rpc OnLogin (OnLoginRequest) returns (google.protobuf.Empty);
}