syntax = "proto3";

option go_package = "pb/game";

import "common_proto/db_base.proto";
import "common_proto/account_database.proto";
import "common_proto/comp.proto";
import "component_proto/player_scene_comp.proto";


/////////////         game
message account_database
{
  option(OptionPrimaryKey) = "account";
  string account = 1;
  string password = 2;
  account_simple_players simple_players = 3;
}

message account_share_database
{
  option(OptionPrimaryKey) = "account";
  string account = 1;
}

//中心服玩家专用数据
message player_centre_database
{
  option(OptionPrimaryKey) = "player_id";
  option(OptionAutoIncrementKey) = "player_id";
  uint64 player_id = 1;
  PlayerSceneInfoComp scene_info = 2;
}

//玩家数据库表1,重要数据放这里，不重要数据放另外一个表，(重要:比如金钱，跟收入有关)，登录马上加载
message player_database
{
  option(OptionPrimaryKey) = "player_id";
  option(OptionAutoIncrementKey) = "player_id";
  uint64 player_id = 1;
  Vector3 pos = 2;
  int64 register_time = 3;
}

//玩家数据库表2,不重要数据放这里，不会马上加载
message player_unimportance_database
{
  option(OptionPrimaryKey) = "player_id";
  option(OptionAutoIncrementKey) = "player_id";
  uint64 player_id = 1;
}